ui/web_modules/sourcegraph/app/styles/App.css
@value colors "sourcegraph/components/styles/_colors.css";
@value vars "sourcegraph/components/styles/_vars.css";
@value base "sourcegraph/components/styles/_base.css";
@value modal "sourcegraph/components/styles/modal.css";

@value desktop_base_size, mobile_base_size, media_sm from vars;
@value c_cool_dark_gray, c_cool_pale_gray_2 from colors;

/*
Stick footer at bottom even if the page content doesn't take up
the entire viewport height.
*/
.main_container {
	display: flex;
	flex-direction: column;
	width: 100%;
	height: 100vh;
}
.main_content {
	display: flex;
	flex-direction: column;
	flex: 1;
}

.main_container_homepage {
	composes: main_container;
}

/* Responsive type scaling */

html {
	color: c_cool_dark_gray;
	font-size: desktop_base_size;
	line-height: 1.5;
	background: c_cool_pale_gray_2;
	background-size: cover;
}

@media only screen and media_sm {
	html {
		font-size: mobile_base_size;
	}
}

.inner_main_content {
	flex: 1 0 auto;
}

